feat(kpi_api): kpi implementado correctamente

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,13 +91,14 @@ addopts = [
     "--tb=short", 
     "--strict-markers",
     "--disable-warnings",
-    "-p", "no:cacheprovider",
-    "--import-mode=importlib"
+    "-p", "no:cacheprovider"
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests", 
     "unit: marks tests as unit tests"
 ]
+# Configuración para asyncio
+asyncio_default_fixture_loop_scope = "function"
 # Evitar que pytest trate el directorio raíz como módulo
 norecursedirs = ["__pycache__", "*.egg-info", ".git", ".venv"]
