🔧 Fix: Corrección comando uv publish para CodeArtifact
- Cambio --repository-url por --publish-url
- Compatibilidad con versiones recientes de uv

--- a/.github/workflows/publish-to-codeartifact.yml
+++ b/.github/workflows/publish-to-codeartifact.yml
@@ -41,4 +41,4 @@ jobs:
             - name: Publish to CodeArtifact
               run: |
                   REPO_URL=$(aws codeartifact get-repository-endpoint --domain adelanta --repository adelanta-toolbox --format pypi --query repositoryEndpoint --output text)
-                  uv publish --repository-url $REPO_URL/pypi/adelanta-toolbox/ dist/*
+                  uv publish --publish-url $REPO_URL/pypi/adelanta-toolbox/ dist/*
