--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "tenacity>=8.0.0",
     "rapidfuzz>=3.0.0",
     "xlsxwriter>=3.0.0",
+    "pydantic-settings>=2.8.1",
 ]
 
 [project.optional-dependencies]
